sumo/tests/sumo/errors/unknown_config_option/sumo.sumocfg
<configuration>
    <blubber value="net.net.xml"/>
</configuration>
